--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/millerrich/README-generator/issues"
   },
-  "homepage": "https://github.com/millerrich/README-generator#readme"
+  "homepage": "https://github.com/millerrich/README-generator#readme",
+  "dependencies": {
+    "inquirer": "^7.3.3"
+  }
 }
